Updates to help text + created README

--- a/views/help.html
+++ b/views/help.html
@@ -14,13 +14,13 @@
         For instance, your could
         write a text in bold by simply writing your content within two asteriks (\*).  
         Thus, `**yourtext**` will look like **yourtext**.
-
+          
         **Further reading**
         1. [Wikipedia](https://en.wikipedia.org/wiki/Markdown)  
         2. [Excellent guide to Mardown by Visual Studio Team Services](https://msdn.microsoft.com/Library/vs/alm/overview/reference/markdown-guidance)  
         3. [Github flavored Markdown](https://guides.github.com/features/mastering-markdown/)  
            
-        *If you are interested to know how this was created, have a look at the [github repository]().*
+        *If you are interested to know how this was created, have a look at the [github repository](https://github.com/ClydeDz/marcdown).*  
 
         **Marcdown is crafted by [Clyde D'Souza](http://goo.gl/8yXVaA)**
     </marked>
