--- a/views/footer.html
+++ b/views/footer.html
@@ -1,7 +1,9 @@
-﻿<footer class="footer">
-    <div class="container-fluid">
-        <a href="#/help" title="Help on markdown"><i class="fa fa-info-circle fa-2x"></i></a>
-        <a href="" title="Github @ClydeDz"><i class="fa fa-github fa-2x"></i></a>
-        <a href="" title="Twitter @ClydeDz"><i class="fa fa-twitter fa-2x"></i></a>       
-    </div>
-</footer>
+﻿<div class="container-fluid footer">
+    <div class="row">
+        <div class="col-xs-12 col-md-12">
+            <a href="#/help" title="Help on markdown"><i class="fa fa-info-circle fa-2x"></i></a>
+            <a href="" title="Github @ClydeDz"><i class="fa fa-github fa-2x"></i></a>
+            <a href="" title="Twitter @ClydeDz"><i class="fa fa-twitter fa-2x"></i></a>
+        </div>
+    </div>     
+</div>
