--- a/views/editor.html
+++ b/views/editor.html
@@ -1,4 +1,5 @@
-﻿<div class="row">
+﻿<!---editor---->
+<div class="row">
     <div class="col-xs-12 col-md-6 text-space">
         <p class="input-label">Input</p>
         <form class="form">
