--- a/views/help.html
+++ b/views/help.html
@@ -1,11 +1,12 @@
-﻿<div ng-controller="HelpController" class="row">
+﻿<!---help---->
+<div ng-controller="HelpController" class="row">
     <div class="col-xs-12 col-md-12">
         <marked>
             ### Help on Marcdown
-            Marcdown is a simple online Markdown editor. It allows you to type your markdown text content and see the output instantly on the
-            right pane. You can also download the markdown text you wrote as a text file, markdown file or a pdf.
+            Marcdown is a simple online Markdown editor. It allows you to type your Markdown text content and see the output instantly on the
+            right pane. You can also download the Markdown text you wrote as a text file, Markdown file or a pdf.
 
-            ### What is markdown?
+            ### What is Markdown?
             Markdown is a lightweight markup language which is used to convert your text files into various other formats. Markdown is extensively
             used as README files as a part of repositories on github and on many other sites.
 
@@ -16,7 +17,7 @@
             write a text in bold by simply writing your content within two asteriks (\*). Thus, `**yourtext**` will look like **yourtext**.
 
             **Further reading**
-            1. [Wikipedia](https://en.wikipedia.org/wiki/Markdown)
+            1. [Wikipedia](https://en.wikipedia.org/wiki/markdown)
             2. [Excellent guide to Mardown by Visual Studio Team Services](https://msdn.microsoft.com/Library/vs/alm/overview/reference/markdown-guidance)
             3. [Github flavored Markdown](https://guides.github.com/features/mastering-markdown/)
 
