--- a/views/footer.html
+++ b/views/footer.html
@@ -1,4 +1,5 @@
-﻿<div class="container-fluid footer">
+﻿<!---footer---->
+<div class="container-fluid footer">
     <div class="row">
         <div class="col-xs-12 col-md-12">
             <a href="#/help" title="Help on markdown"><i class="fa fa-info-circle fa-2x"></i></a>
