--- a/views/menu.html
+++ b/views/menu.html
@@ -1,4 +1,5 @@
-﻿<nav class="navbar navbar-default" role="navigation">
+﻿<!---menu---->
+<nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-center navbar-brand"><a  href="#/" class="navbar-brand"><img src="../assets/mackdown-inverse.png" height="35" width="35" class="img-responsive"/>Marcdown</a></div>
