back button on the help view

--- a/css/default.css
+++ b/css/default.css
@@ -181,6 +181,10 @@ a>i.fa{
     margin:15px;
     text-align:justify;
 }
+.back-panel{
+    margin-top:15px;
+    margin-bottom:15px;
+}
 
 /*
     global
