--- a/views/help.html
+++ b/views/help.html
@@ -1,4 +1,9 @@
 ﻿<!---help---->
+<div class="row">
+    <div class="col-xs-12 col-md-12 back-panel">
+        <a href="#/"><i class="fa fa-arrow-left"></i> Back to the editor</a>
+    </div>
+</div>
 <div ng-controller="HelpController" class="row">
     <div class="col-xs-12 col-md-12">
         <marked>
