--- a/views/footer.html
+++ b/views/footer.html
@@ -3,8 +3,8 @@
     <div class="row">
         <div class="col-xs-12 col-md-12">
             <a href="#/help" title="Help on markdown"><i class="fa fa-info-circle fa-2x"></i></a>
-            <a href="" title="Github @ClydeDz"><i class="fa fa-github fa-2x"></i></a>
-            <a href="" title="Twitter @ClydeDz"><i class="fa fa-twitter fa-2x"></i></a>
+            <a href="https://github.com/ClydeDz/marcdown" title="Github @ClydeDz"><i class="fa fa-github fa-2x"></i></a>
+            <a href="https://twitter.com/ClydeDz" title="Twitter @ClydeDz"><i class="fa fa-twitter fa-2x"></i></a>
         </div>
     </div>     
 </div>
