added .doc download ability

--- a/views/editor.html
+++ b/views/editor.html
@@ -18,6 +18,7 @@
         <span> Download as:<span class="visible-xs-block hidden-sm-block hidden-md-block hidden-lg-block"><br /></span>
             <a ng-click="downloadText(markdownContent)"><i class="fa fa-file-text-o"></i>.txt</a>
             <a ng-click="downloadMarkdown(markdownContent)"><i class="fa fa-file-o"></i>.md</a>
+            <a ng-click="downloadWord()"><i class="fa fa-file-word-o"></i>.doc</a>    
             <a ng-click="openPdf()"><i class="fa fa-file-pdf-o"></i>.pdf</a>
             <span class="visible-xs-block hidden-sm-block hidden-md-block hidden-lg-block"><br /></span>
         </span>        
