--- a/css/default.css
+++ b/css/default.css
@@ -195,6 +195,9 @@ body{
     color:rgba(0, 0, 0, 0.7);
     font-family: 'Roboto', sans-serif;
 }
+.tweet-share{
+    margin-top:4px;
+}
 .container-fluid{
     padding-left:20px;
     padding-right:20px;
