--- a/views/footer.html
+++ b/views/footer.html
@@ -1,10 +1,17 @@
 ﻿<!---footer---->
 <div class="container-fluid footer">
     <div class="row">
-        <div class="col-xs-12 col-md-12">
+        <div class="col-xs-8 col-md-8">
             <a href="#/help" title="Help on markdown"><i class="fa fa-info-circle fa-2x"></i></a>
             <a href="https://github.com/ClydeDz/marcdown" title="Github @ClydeDz"><i class="fa fa-github fa-2x"></i></a>
             <a href="https://twitter.com/ClydeDz" title="Twitter @ClydeDz"><i class="fa fa-twitter fa-2x"></i></a>
         </div>
+        <div class="col-xs-4 col-md-4 text-right">
+            <div class="tweet-share">
+                <a href="https://twitter.com/share" class="twitter-share-button" {count} data-via="ClydeDz" data-size="large" data-related="ClydeDz" data-hashtags="marcdown">Tweet</a>
+                <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
+            </div>
+        </div>        
     </div>     
 </div>
+
