--- a/views/footer.html
+++ b/views/footer.html
@@ -4,6 +4,7 @@
         <div class="col-xs-8 col-md-8">
             <a href="#/help" title="Help on markdown"><i class="fa fa-info-circle fa-2x"></i></a>
             <a href="https://github.com/ClydeDz/marcdown" title="Github @ClydeDz"><i class="fa fa-github fa-2x"></i></a>
+            <a href="http://www.clyde.nz/" title="Crafted by Clyde D'Souza" rel="nofollow"><i class="fa fa-globe fa-2x"></i></a>
             <a href="https://twitter.com/ClydeDz" title="Twitter @ClydeDz"><i class="fa fa-twitter fa-2x"></i></a>
         </div>
         <div class="col-xs-4 col-md-4 text-right">
