Updated website link

--- a/views/help.html
+++ b/views/help.html
@@ -28,7 +28,7 @@
 
             *If you are interested to know how this was created, have a look at the [github repository](https://github.com/ClydeDz/marcdown).*
 
-            **Marcdown is crafted by [Clyde D'Souza](http://goo.gl/8yXVaA)**
+            **Marcdown is crafted by [Clyde D'Souza](http://clydedsouza.net)**
         </marked>
     </div>
 </div>
